src/objects/ADvendio__AdTypeRateCategoryAssingment__c.object
<CustomObject>
    <description>This object is used to define, which Ad Type is available in which Rate Category.</description>
    <fields>
        <fullName>ADvendio__AdType__c</fullName>
        <description>This field shows the related Ad Type.</description>
        <inlineHelpText>This field shows the related Ad Type.</inlineHelpText>
        <label>Ad Type</label>
        <referenceTo>ADvendio__Ad_Type__c</referenceTo>
        <relationshipLabel>Assigned Rate Categories</relationshipLabel>
        <relationshipName>AdTypeRateCategoryAssingments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__BillingCategory__c</fullName>
        <label>Billing Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPM</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>CPD</fullName>
                </value>
                <value>
                    <fullName>CPO</fullName>
                </value>
                <value>
                    <fullName>CPW</fullName>
                </value>
                <value>
                    <fullName>CPMo</fullName>
                </value>
                <value>
                    <fullName>CPY</fullName>
                </value>
                <value>
                    <fullName>CPL</fullName>
                </value>
                <value>
                    <fullName>CPx</fullName>
                </value>
                <value>
                    <fullName>CPMSec</fullName>
                </value>
                <value>
                    <fullName>edition</fullName>
                </value>
                <value>
                    <fullName>allin</fullName>
                </value>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__RateCategory__c</fullName>
        <description>This field shows the related Rate Category.</description>
        <inlineHelpText>This field shows the related Rate Category.</inlineHelpText>
        <label>Rate Category</label>
        <referenceTo>ADvendio__RateCategory__c</referenceTo>
        <relationshipLabel>Assigned Ad Types</relationshipLabel>
        <relationshipName>AdTypeRateCategoryAssingments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Rate__c</fullName>
        <description>This field is used for an automated Ad Price creation within the Ad Spec Designer.</description>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Ad Type Rate Category Assingment</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{000000}</displayFormat>
        <label>Ad Type Rate Category Assingment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ad Type Rate Category Assingments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>